--- a/style.css
+++ b/style.css
@@ -296,3 +296,44 @@ body {
 #nav1 li{
     margin-left: 6.5%;
 }
+.m-2rem{
+    margin:2rem;
+}
+
+.container1 {
+    position: relative;
+    width: 100%;
+}
+.image1 {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.overlay1 {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #00000091;
+}
+.container1:hover .overlay1 {
+    opacity: 1;
+}
+
+.text1 {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
