--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ body {
     text-align: center;
 }
 
-/*LANDSCAPE CSS*/
+/*PORTFOLIO CSS*/
 .overlay2 {
     position: absolute;
     top: 0;
@@ -368,4 +368,15 @@ body {
     border: 4vw solid rgb(255, 255, 255);
     border-radius: 3px;
   }
-/*LANDSCAPE ANIMATION*/
+.text_bott_center_paysage{
+    color: white;
+    font-size: 3vw;
+    position: absolute;
+    top: 78%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+/*PORTFOLIO ANIMATION*/
